--- a/First_Semester_Unit2_concept_2_Lesson4.html
+++ b/First_Semester_Unit2_concept_2_Lesson4.html
@@ -3,264 +3,179 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Second Semester - الدرس الأول</title>
+<title>Second Semester - Lesson 4</title>
+
 <style>
-  body {
-    font-family: "Segoe UI", Tahoma, sans-serif;
-    background: linear-gradient(to bottom, #1f2937, #3b82f6);
-    margin: 0;
-    padding: 0;
-    color: #f8fafc;
-    text-align: center;
-  }
-
-  header {
-    background: linear-gradient(90deg, #3b82f6, #60a5fa);
-    color: white;
-    padding: 25px;
-    font-size: 28px;
-    font-weight: bold;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-  }
-
-  section {
-    max-width: 900px;
-    margin: 30px auto;
-    padding: 25px;
-    background: #111827;
-    border-radius: 20px;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.5);
-  }
-
-  section img {
-    width: 180px;
-    border-radius: 50%;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-    margin-bottom: 15px;
-  }
-
-  section h2 {
-    font-size: 26px;
-    margin-bottom: 10px;
-    color: #60a5fa;
-  }
-
-  section p {
-    font-size: 18px;
-    color: #cbd5e1;
-    margin-bottom: 20px;
-  }
-
-  .container {
-    max-width: 900px;
-    margin: 20px auto;
-    background: #1e293b;
-    padding: 25px;
-    border-radius: 20px;
-    box-shadow: 0 10px 25px rgba(0,0,0,.4);
-  }
-
-  h1 {
-    text-align: center;
-    color: #60a5fa;
-  }
-
-  .question {
-    margin-bottom: 20px;
-    padding: 20px;
-    background: #3b4252;
-    border-radius: 15px;
-    text-align: left;
-  }
-
-  label { 
-    display: block; 
-    margin: 8px 0;
-    cursor: pointer;
-  }
-
-  input[type=text] {
-    width: 100%;
-    padding: 12px;
-    border-radius: 10px;
-    border: none;
-    outline: none;
-    margin-top: 10px;
-  }
-
-  input[type=radio] {
-    margin-left: 10px;
-    cursor: pointer;
-  }
-
-  button {
-    width: 100%;
-    padding: 15px;
-    font-size: 20px;
-    background: linear-gradient(90deg, #3b82f6, #60a5fa);
-    color: white;
-    border: none;
-    border-radius: 15px;
-    cursor: pointer;
-    transition: 0.3s;
-    margin-top: 15px;
-  }
-
-  button:hover {
-    transform: translateY(-3px) scale(1.02);
-    box-shadow: 0 8px 20px rgba(0,0,0,0.5);
-  }
-
-  button:disabled {
-    background: #555;
-    cursor: not-allowed;
-  }
-
-  .feedback {
-    display: none;
-    font-weight: bold;
-    margin-top: 10px;
-  }
-
-  .show-correction .feedback { 
-    display: block; 
-  }
-
-  #infoBox {
-    display: none;
-    margin-bottom: 20px;
-    padding: 15px;
-    border-radius: 15px;
-    background: #60a5fa;
-    color: #111827;
-    font-size: 18px;
-  }
-
-  .show-correction #infoBox { display: block; }
+body{
+  font-family:"Segoe UI",Tahoma;
+  background:linear-gradient(to bottom,#1f2937,#3b82f6);
+  margin:0;
+  color:#f8fafc;
+  text-align:center;
+}
+header{
+  background:linear-gradient(90deg,#3b82f6,#60a5fa);
+  padding:25px;
+  font-size:28px;
+  font-weight:bold;
+  border-radius:0 0 20px 20px;
+}
+section{
+  max-width:900px;
+  margin:25px auto;
+  background:#111827;
+  padding:25px;
+  border-radius:20px;
+}
+.container{
+  max-width:900px;
+  margin:20px auto;
+  background:#1e293b;
+  padding:25px;
+  border-radius:20px;
+}
+.question{
+  background:#3b4252;
+  padding:20px;
+  margin-bottom:15px;
+  border-radius:15px;
+  text-align:left;
+}
+label{display:block;margin:6px 0;cursor:pointer}
+input[type=text]{width:100%;padding:10px;border-radius:10px;border:none}
+button{
+  width:100%;
+  padding:15px;
+  font-size:20px;
+  border:none;
+  border-radius:15px;
+  background:linear-gradient(90deg,#3b82f6,#60a5fa);
+  cursor:pointer;
+}
+.feedback{display:none;font-weight:bold;margin-top:8px}
+.show .feedback{display:block}
+#infoBox{
+  display:none;
+  background:#60a5fa;
+  color:#111827;
+  padding:15px;
+  border-radius:15px;
+  margin-bottom:15px;
+}
+.show #infoBox{display:block}
 </style>
 </head>
+
 <body>
 
-<header>Second Semester - الدرس الأول</header>
+<header>Second Semester - Lesson 1</header>
 
 <section>
-    <img src="First_Semester.jpg" alt="صورة الدرس">
-    <h2>Second_Semester_Unit4_concept_1_Lesson1</h2>
-    <p>حل الواجب التالي بعناية ثم احفظ نتيجتك كصورة!</p>
+<h2>Unit 4 – Concept 1</h2>
+<p>حل الواجب ثم احفظه كصورة 📸</p>
 </section>
 
 <div class="container" id="printArea">
 
-<h1>H.W</h1>
+<h2>Homework</h2>
 
 <div id="infoBox">
-  <div>اسم الطالب: <strong id="imgName"></strong></div>
-  <div>الدرجة: <strong id="imgScore"></strong></div>
-  <div>التاريخ والوقت: <strong id="imgDate"></strong></div>
+الاسم: <b id="imgName"></b><br>
+الدرجة: <b id="imgScore"></b><br>
+التاريخ: <b id="imgDate"></b>
 </div>
 
 <div class="question">
-<label>اسم الطالب:</label>
+اسم الطالب:
 <input type="text" id="studentName">
 </div>
 
-<div class="question">
-<h3>1) Helium is lighter than air</h3>
-<label><input type="radio" name="q1" value="a"> a physical property</label>
-<label><input type="radio" name="q1" value="b"> a chemical property</label>
-<div class="feedback" id="f1"></div>
-</div>
 
-<div class="question">
-<h3>2) Blimps are filled with</h3>
-<label><input type="radio" name="q2" value="a"> oxygen</label>
-<label><input type="radio" name="q2" value="b"> helium</label>
-<div class="feedback" id="f2"></div>
-</div>
+<!-- أكمل -->
+<div class='question'><h3>1 We can remove sea weeds from ocean's water by using______a process, just as we remove salt from ocean's water by ______</h3>
+<input type='text' id='q1'>
+<div class='feedback' id='f1'></div></div>
+<div class='question'><h3>2 In marine food webs, algae is considered as______ a food source, while shark is considered a food source. ______</h3>
+<input type='text' id='q2'>
+<div class='feedback' id='f2'></div></div>
+<div class='question'><h3>3 A measuring cup is used to measure the______, while a thermometer is used to measure the. ______</h3>
+<input type='text' id='q3'>
+<div class='feedback' id='f3'></div></div>
+<div class='question'><h3>4 Give a reason for:The change in population of one species affects the population of other species. ______</h3>
+<input type='text' id='q4'>
+<div class='feedback' id='f4'></div></div>
+<!-- صح وخطأ -->
+<div class="question"><h3>Floating and sinking in water depend on the mass of the substance.</h3>
+<label><input type="radio" name="q5" value="true"> True</label>
+<label><input type="radio" name="q5" value="false"> False</label>
+<div class="feedback" id="f5"></div></div>
+<!-- أكمل -->
+ <div class='question'><h3>6(B) What happens to...? 1. The speed of particles of a substance when the temperature increases. ______</h3>
+<input type='text' id='q6'>
+<div class='feedback' id='f6'></div></div>
+<div class='question'><h3>7(B) What happens to...? 2. The producers and secondary consumers in an ecosystem when the number of rabbits increases. ______</h3>
+<input type='text' id='q7'>
+<div class='feedback' id='f7'></div></div>
+<!-- اختيار من متعدد -->
+<div class="question"><h3>8is repairing all parts of the habitat and preventing species from</h3>
+<label><input type="radio" name="q8" value="a">a. Population - decrease</label>
+<label><input type="radio" name="q8" value="b">b. Habitat restoration - extinction.</label>
+<label><input type="radio" name="q8" value="c">c. Population - increase.</label>
+<div class="feedback" id="f8"></div></div>
 
-<div class="question">
-<h3>3) Steel is used in hammers because it is</h3>
-<label><input type="radio" name="q3" value="a"> flexible</label>
-<label><input type="radio" name="q3" value="b"> hard</label>
-<div class="feedback" id="f3"></div>
-</div>
+
 
 <button id="saveBtn" onclick="generateImage()">📸 حفظ الواجب كصورة</button>
-
-<a href="index.html" style="display:inline-block; margin-top:20px; text-decoration:none; color:#111827; background:#60a5fa; padding:12px 25px; border-radius:12px;">⬅ العودة إلى الرئيسية</a>
 
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+
 <script>
-const LOCK_DAYS = 30;
-const STORAGE_KEY = "homework_locked";
-
-window.onload = function () {
-  const lockData = localStorage.getItem(STORAGE_KEY);
-  if (lockData) {
-    const savedTime = parseInt(lockData, 10);
-    const now = Date.now();
-    const diffDays = (now - savedTime) / (1000 * 60 * 60 * 24);
-    if (diffDays < LOCK_DAYS) {
-      lockHomework();
-    } else {
-      localStorage.removeItem(STORAGE_KEY);
-    }
-  }
-};
-
-function lockHomework() {
-  document.getElementById("saveBtn").disabled = true;
-  document.getElementById("saveBtn").innerText = "✔️ تم تسليم الواجب";
-  document.querySelectorAll("input").forEach(el => el.disabled = true);
-}
-
 function generateImage(){
-  if (document.getElementById("saveBtn").disabled) return;
+  const name=document.getElementById("studentName").value.trim();
+  if(!name){alert("اكتب الاسم");return;}
 
-  const name = document.getElementById("studentName").value.trim();
-  if(!name){
-    alert("اكتب اسم الطالب");
-    return;
-  }
-
-  let score = 0;
-  const answers = { q1:"a", q2:"b", q3:"b" };
+  let score=0;
+  const answers={
+    q1:"filtration - evaporation",
+    q2:"producer - consumer",
+    q3:"volume - temperature",
+    q4:"because in the ecosystem, all species depend on other species to survive, so an increase or decrease in one species affects the population of other species",
+    q5:"false",
+    q6:"The speed of particles will increase",
+    q7:"The number of producers decreases, while the number of secondary consumers increases",
+    q8:"b"
+  };
 
   Object.keys(answers).forEach((q,i)=>{
-    const selected = document.querySelector(`input[name="${q}"]:checked`);
-    const fb = document.getElementById("f"+(i+1));
-    if(selected && selected.value === answers[q]){
-      score++;
-      fb.innerHTML="✔️ إجابة صحيحة";
+    const fb=document.getElementById("f"+(i+1));
+    if(q<="q5"){
+      const sel=document.querySelector(`input[name="${q}"]:checked`);
+      if(sel && sel.value===answers[q]){
+        score++; fb.innerHTML="✔ صحيح";
+      }else fb.innerHTML="✖ خطأ";
     }else{
-      fb.innerHTML="❌ إجابة خاطئة";
+      const val=document.getElementById(q).value.trim().toLowerCase();
+      if(val===answers[q]){
+        score++; fb.innerHTML="✔ صحيح";
+      }else fb.innerHTML="✖ خطأ";
     }
   });
 
-  document.getElementById("imgName").textContent = name;
-  document.getElementById("imgScore").textContent = score + " / 3";
+  document.getElementById("imgName").textContent=name;
+  document.getElementById("imgScore").textContent=score+" / 7";
+  document.getElementById("imgDate").textContent=new Date().toLocaleString("ar-EG");
 
-  const now = new Date();
-  document.getElementById("imgDate").textContent =
-    now.toLocaleDateString("ar-EG") + " - " + now.toLocaleTimeString("ar-EG");
-
-  const area = document.getElementById("printArea");
-  area.classList.add("show-correction");
+  const area=document.getElementById("printArea");
+  area.classList.add("show");
 
   html2canvas(area).then(canvas=>{
-    const link = document.createElement("a");
-    link.download = "homework.png";
-    link.href = canvas.toDataURL();
-    link.click();
-
-    area.classList.remove("show-correction");
-
-    localStorage.setItem(STORAGE_KEY, Date.now());
-    lockHomework();
+    const a=document.createElement("a");
+    a.download="homework.png";
+    a.href=canvas.toDataURL();
+    a.click();
+    area.classList.remove("show");
   });
 }
 </script>
