--- a/First_Semester_Unit1_concept_2_Lesson1.html
+++ b/First_Semester_Unit1_concept_2_Lesson1.html
@@ -166,26 +166,56 @@
 <input type="text" id="studentName">
 </div>
 
-<div class="question">
-<h3>1) Helium is lighter than air</h3>
-<label><input type="radio" name="q1" value="a"> a physical property</label>
-<label><input type="radio" name="q1" value="b"> a chemical property</label>
-<div class="feedback" id="f1"></div>
-</div>
-
-<div class="question">
-<h3>2) Blimps are filled with</h3>
-<label><input type="radio" name="q2" value="a"> oxygen</label>
-<label><input type="radio" name="q2" value="b"> helium</label>
-<div class="feedback" id="f2"></div>
-</div>
-
-<div class="question">
-<h3>3) Steel is used in hammers because it is</h3>
-<label><input type="radio" name="q3" value="a"> flexible</label>
-<label><input type="radio" name="q3" value="b"> hard</label>
-<div class="feedback" id="f3"></div>
-</div>
+<div class="question"><h3>1.............A scalar quantity is identified by its</h3>
+<label><input type="radio" name="q1" value="a"><span class="radio-text">a. magnitude only.</span></label>
+<label><input type="radio" name="q1" value="b"><span class="radio-text">c. magnitude and direction.</span></label>
+<label><input type="radio" name="q1" value="c"><span class="radio-text">b. direction only.</span></label>
+<label><input type="radio" name="q1" value="d"><span class="radio-text">d. magnitude and velocity.</span></label><div class="feedback" id='f1'></div></div>
+<div class="question"><h3>2. To determine length, mass, and time, we must know</h3>
+<label><input type="radio" name="q2" value="a"><span class="radio-text">a. the magnitude and the direction.</span></label>
+<label><input type="radio" name="q2" value="b"><span class="radio-text">b. the magnitude and the measuring unit.</span></label>
+<label><input type="radio" name="q2" value="c"><span class="radio-text">c. the direction and the measuring unit.</span></label>
+<label><input type="radio" name="q2" value="d"><span class="radio-text">d. the magnitude, the direction, and the measuring unit.</span></label><div class="feedback" id='f2'></div></div>
+<div class="question"><h3>3. Examples of scalar physical quantities include</h3>
+<label><input type="radio" name="q3" value="a"><span class="radio-text">a. length and acceleration.</span></label>
+<label><input type="radio" name="q3" value="b"><span class="radio-text">c. mass and velocity.</span></label>
+<label><input type="radio" name="q3" value="c"><span class="radio-text">b. time and weight.</span></label>
+<label><input type="radio" name="q3" value="d"><span class="radio-text">d. time and speed.</span></label><div class="feedback" id='f3'></div></div>
+<div class="question"><h3>4. Which of the following physical quantities are considered scalars only?</h3>
+<label><input type="radio" name="q4" value="a"><span class="radio-text">a. force and time.</span></label>
+<label><input type="radio" name="q4" value="b"><span class="radio-text">b. mass and force.</span></label>
+<label><input type="radio" name="q4" value="c"><span class="radio-text">c. radius and area.</span></label>
+<label><input type="radio" name="q4" value="d"><span class="radio-text">d. displacement and acceleration.</span></label><div class="feedback" id='f4'></div></div>
+<div class="question"><h3>is the physical quantity for which both its magnitude and direction are necessary to identify it.</h3>
+<label><input type="radio" name="q5" value="a"><span class="radio-text">a. The quantity of matter</span></label>
+<label><input type="radio" name="q5" value="b"><span class="radio-text">b. Scalar quantity</span></label>
+<label><input type="radio" name="q5" value="c"><span class="radio-text">c. Vector quantity</span></label>
+<label><input type="radio" name="q5" value="d"><span class="radio-text">d. Speed</span></label><div class="feedback" id='f5'></div></div>
+<div class="question"><h3>6. Which of the following physical quantities are considered as vectors only?</h3>
+<label><input type="radio" name="q6" value="a"><span class="radio-text">a. The mass and the force.</span></label>
+<label><input type="radio" name="q6" value="b"><span class="radio-text">c. The radius and the area.</span></label>
+<label><input type="radio" name="q6" value="c"><span class="radio-text">b. The displacement and the acceleration.</span></label>
+<label><input type="radio" name="q6" value="d"><span class="radio-text">d. The force and the time.</span></label><div class="feedback" id='f6'></div></div>
+<div class="question"><h3>7. An example of a vector physical quantity is</h3>
+<label><input type="radio" name="q7" value="a"><span class="radio-text">a. displacement.</span></label>
+<label><input type="radio" name="q7" value="b"><span class="radio-text">b. mass.</span></label>
+<label><input type="radio" name="q7" value="c"><span class="radio-text">c. time.</span></label>
+<label><input type="radio" name="q7" value="d"><span class="radio-text">d. distance.</span></label><div class="feedback" id='f7'></div></div>
+<div class="question"><h3>8. One of the vector physical quantities is</h3>
+<label><input type="radio" name="q8" value="a"><span class="radio-text">a. time of a car trip.</span></label>
+<label><input type="radio" name="q8" value="b"><span class="radio-text">c. mass of a cat.</span></label>
+<label><input type="radio" name="q8" value="c"><span class="radio-text">b. length of a pen.</span></label>
+<label><input type="radio" name="q8" value="d"><span class="radio-text">d. force by which a person pushes a stone.</span></label><div class="feedback" id='f8'></div></div>
+<div class="question"><h3>is a vector quantity measured in m/sec. 9.</h3>
+<label><input type="radio" name="q9" value="a"><span class="radio-text">a. Velocity</span></label>
+<label><input type="radio" name="q9" value="b"><span class="radio-text">b. Acceleration</span></label>
+<label><input type="radio" name="q9" value="c"><span class="radio-text">c. Speed</span></label>
+<label><input type="radio" name="q9" value="d"><span class="radio-text">d. Displacement</span></label><div class="feedback" id='f9'></div></div>
+<div class="question"><h3>10. Acceleration is a</h3>
+<label><input type="radio" name="q10" value="a"><span class="radio-text">a. vector quantity whose unit is m/sec?</span></label>
+<label><input type="radio" name="q10" value="b"><span class="radio-text">b. vector quantity whose unit is m/sec.</span></label>
+<label><input type="radio" name="q10" value="c"><span class="radio-text">2 c. scalar quantity whose unit is m/sec?</span></label>
+<label><input type="radio" name="q10" value="d"><span class="radio-text">d. scalar quantity whose unit is m/sec</span></label><div class="feedback" id='f10'></div></div>
 
 <button id="saveBtn" onclick="generateImage()">📸 حفظ الواجب كصورة</button>
 
@@ -195,7 +225,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 <script>
-const LOCK_DAYS = 30;
+const LOCK_DAYS = 0;
 const STORAGE_KEY = "homework_locked";
 
 window.onload = function () {
